# ml-classic-starter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: predict.py  train.py
src/mlc/: config.py  data.py  features.py  infer.py  model.py  utils.py
tests/: test_features.py  test_infer.py  test_model.py
