[tool.poetry]
name = "ml-classic-starter"
version = "0.1.0"
description = "Starter template for classic ML projects with scikit-learn"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "mlc", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "*"
pyyaml = "*"
pandas = "^2.3.2"
joblib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true